<resources>
    <string name="app_name">Leftovers</string>
    <string name="Resend_OTP_in">Resend OTP in </string>
    <string name="seconds">s</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up2">Sign up</string>
    <string name="todo2" />
    <string name="todo">todo3</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up3">sign up</string>
    <string name="sign_upCapital">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="mail_example">test@gmail.com</string>
    <string name="send_code_OTP">Please enter your code that we have sent to your phone</string>
    <string name="todo4">TODO</string>
    <string name="_39_3922519238">+39 3922519238</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="buttonProva">Button</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="content_description_search" />
    <string name="search" />
    <string name="more" />
    <string name="content_description_more" />
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="logo_round">logo_round</string>
    <string name="hamburger_logo">hamburger_logo</string>
    <string name="salad_logo">salad_logo</string>
    <string name="don_t_have_an_account_">Don\'t have an account?</string>
    <string name="dragonfruit_logo">dragonfruit_logo</string>
    <string name="george_bernard_shaw">George Bernard Shaw</string>
    <string name="quote">“Nessun amore è più sincero dell\'amore per il cibo”</string>
    <string name="ingredienti">Scegli gli ingredienti</string>
    <string name="choose_the_ingredients">Choose the ingredients</string>
    <string name="search_a_recipe">Search a recipe</string>
    <string name="todo5">TODO</string>
    <string name="welcome">Welcome,</string>
    <string name="user">user</string>
    <item name="textViewEmail" type="id" />
    <item name="textViewPassword" type="id" />
    <item name="json_list" type="id" />
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="fab_content_desc" />
    <string name="page_title" />
    <string name="favorite" />
    <string name="content_description_favorite" />
    <string name="menu" />
    <string name="content_description_menu" />
    <string name="label" />
    <string-array name="prova">
        <item>prova</item>
        <item>prova2</item>
        <item>prova3</item>
    </string-array>
    <string name="option_1" />
    <string name="option_2" />
    <string name="option_3" />
    <string name="content_description_media" />
    <string name="title" />
    <string name="secondary_text" />
    <string name="supporting_text" />
    <string name="welcome_userino">Welcome, Userino</string>
    <string name="dragonfruit">DragonFruit</string>
    <string name="presentation">Leftovers is a simple app that helps you to find the best recipes for your next meal.</string>
    <string name="scanBtn">Click here to scan a product</string>
    <string name="recipeBtn">Click here to search a recipe</string>
    <string name="arrow">arrow</string>
    <string name="barcode">barcode</string>
    <string name="errorEP">Wrong email and password</string>
    <string name="usernameR">Username</string>
    <string name="e_mailR">E-mail</string>
    <string name="passwordR">Password</string>
    <string name="logout_logo">logout_logo</string>
    <string name="eye_logo">eye</string>
    <string name="logout">Logout</string>
    <string name="choose_the_filter">CHOOSE THE FILTER</string>
    <string name="select_a_food">Select a food</string>
    <string name="find_a_recipe">Find a recipe</string>
    <string name="recipe_found">recipe found</string>
    <string name="backgroundcardtype">backgroundCardType</string>
    <string name="book_marks">book_marks</string>
    <string name="heartbtn">heartbtn</string>
    <string name="titolo">TITOLO</string>
    <string name="servants">Servants:</string>
    <string name="kcal">KCAL:</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="rate_this_recipe">RATE THIS RECIPE</string>
    <string name="userlogo">userlogo</string>
    <string name="la_mia_app">La mia APP</string>
    <string name="product_image">product_image</string>
    <string name="_1_portion">1 portion</string>
    <string name="_100g">100g</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sugars">Sugars</string>
    <string name="protein">Protein</string>
    <string name="fiber">Fiber</string>
    <string name="salt">Salt</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="calories_kcal">Calories KCAL</string>


</resources>