<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="283dp"
        android:layout_height="242dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo4"
        android:src="@drawable/sms_otp" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/otp_verification_text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code_OTP"
        android:textColor="#66000000"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="12sp"
         android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/otpEMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/mail_example"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/mobile_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/_39_3922519238"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/otpET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/round_black"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/otpET2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/round_black"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/otpET3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/round_black"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/otpET4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/round_black"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_primary"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_otp"/>
        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/resend_code"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>