<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="197dp"
            android:layout_height="189dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            android:contentDescription="@string/logo_round"
            app:srcCompat="@drawable/round_logo_transparent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/usernameR"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/alata"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/e_mailR"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/alata"
                tools:ignore="RtlCompat"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/passwordR"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/alata"
                tools:ignore="RtlCompat"/>
            <ImageView
                android:id="@+id/eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_remove_red_eye_24"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="300dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/eye_logo"

                />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_exit_to_app_24"
            android:contentDescription="@string/logout_logo"
            />
        <TextView
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>