<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_splashscreen"

    tools:context=".MainActivity">

    <!--<ListView
        android:id="@+id/json_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="183dp"
        android:layout_height="183dp"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/logo_round"
        android:src="@drawable/round_logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="266dp"
        android:layout_height="80dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/quote"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:fontFamily="@font/nothing_you_could_do"
        android:gravity="center"
        android:text="@string/george_bernard_shaw"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="204dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alata"
            android:text="LET'S GO"
            android:textAlignment="center"
            android:textColor="#7C000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>


